--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -13,11 +13,8 @@ jobs:
     container: node:16
     steps:
       - uses: actions/checkout@v3
-      - run: |
-          cd packages/container
-          npm install
-          npm run build
-
+      - run: npm install
+      - run: npm run build
       - uses: chrislennon/action-aws-cli@v1.1
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
